# Image_Search_Tools

./: .gitignore  LICENSE  Project_Description.txt  README.md  start.bat
backend/: cli.py  pyproject.toml
backend/app/: config.py  database.py  exif_utils.py  faiss_manager.py  feature_extractor.py  main.py  models.py  schemas.py
backend/app/routers/: images.py  ingest.py  search.py
backend/tests/: conftest.py  test_cli.py  test_faiss_manager.py  test_feature_extractor.py  test_images.py  test_ingest.py  test_model_registry.py  test_models.py  test_schemas.py  test_search.py
frontend/: nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/__tests__/: utils.js
frontend/app/assets/: main.css
frontend/app/components/: AppFooter.vue  ExifPanel.vue  HdrBadge.vue  ImageCard.vue  ImagePreview.vue  NavBar.vue
frontend/app/components/__tests__/: AppFooter.spec.js  ImageCard.spec.js  NavBar.spec.js  default.spec.js
frontend/app/composables/: useTheme.js
frontend/app/composables/__tests__/: useTheme.spec.js
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue  logs.vue  search.vue  upload.vue
frontend/app/pages/__tests__/: index.spec.js  logs.spec.js  search.spec.js  upload.spec.js
frontend/app/utils/: image.js
openspec/changes/add-front-test/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-16-testcase-for-backend/: design.md  proposal.md  tasks.md
openspec/changes/batch-cli-tool/: design.md  proposal.md  tasks.md
openspec/changes/multi-model-support/: proposal.md
(+24 files in other folders)
