[project]
name = "image-search-backend"
version = "0.1.0"
description = "Image Search Engine with Xception + FAISS"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.20.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.9",
    "torch>=2.1.0",
    "torchvision>=0.18.0",
    "timm>=1.0.0",
    "faiss-cpu>=1.7.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
